<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/bk"
    android:gravity="center"
    android:id="@+id/loginLayout"
    android:orientation="vertical"
    tools:context=".auth.LoginActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/et_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/et_password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="80dp"
        android:background="@drawable/selector_button"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/txtColor"
        android:textSize="13sp" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="80dp"
        android:background="@drawable/selector_button"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@color/txtColor"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tv_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:clickable="true"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/forget_password"
        android:textColor="@color/txtColor"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/or_signin_with"
        android:textColor="@color/white"
        android:textSize="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="2dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/fbimage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_facebook" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/google_sign_in"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_google" />

            <com.twitter.sdk.android.core.identity.TwitterLoginButton
                android:id="@+id/twitter"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="10dp"
                android:scaleType="centerCrop" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>