<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/ic_logo"
    android:gravity="center"
    tools:context=".auth.RegisterActivity">


    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tx"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:elevation="20dp"
        android:orientation="vertical"
        android:padding="10dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_email_id"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/et_name"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ed2"
            android:padding="15dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/et_password_id"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearlayout"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="80dp"
        android:background="@drawable/selector_button"
        android:fontFamily="sans-serif-bold"
        android:text="@string/btn_register"
        android:textColor="@color/txtColor"
        android:textSize="15sp" />
</RelativeLayout>
